prevent image overflow

--- a/hudproblem/widgets/type-card/_type-card.scss
+++ b/hudproblem/widgets/type-card/_type-card.scss
@@ -20,6 +20,8 @@ $image_size_l: 204px;
         width: $image_size_s;
         height: $image_size_s;
         flex: 0 0 $image_size_s;
+        max-width: 100%;
+        max-height: 100%;
 
         img {
             width: auto;
